--- a/src/styles/PuzzleInteractive.css
+++ b/src/styles/PuzzleInteractive.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
   width: 100%;
 }
 
@@ -11,7 +10,7 @@
   align-items: center;
   justify-content: center;
   gap: 40px;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .puzzle-side {
@@ -80,7 +79,7 @@
 
 .button-container {
   display: flex;
-  gap: 20px;
+  gap: 40px;
   margin-top: 40px;
 }
 
