--- a/src/styles/RobotThinking.css
+++ b/src/styles/RobotThinking.css
@@ -12,11 +12,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
   max-width: 800px;
   width: 100%;
   position: relative;
-  padding-top: 20px;
   padding-bottom: 80px;
 }
 
@@ -28,7 +26,6 @@
   width: 100%;
   max-width: 700px;
   gap: 80px;
-  margin-bottom: 10px;
 }
 
 .memory-cloud-container-right {
@@ -46,17 +43,22 @@
 }
 
 .memory-cloud {
-  background-color: rgba(255, 255, 255, 0.98);
-  border-radius: 50px;
-  padding: 25px 35px;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+  background-image: url('../assets/cloud.svg');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 65px 45px 45px 45px;
   min-width: 250px;
-  max-width: 300px;
+  max-width: 310px;
   text-align: center;
+  filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.2));
   position: relative;
   opacity: 0;
   transform: translateY(-20px);
   transition: all 0.6s ease-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .memory-cloud.show {
@@ -65,7 +67,7 @@
 }
 
 .memory-cloud-text {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
   color: #333;
   margin: 0;
@@ -132,7 +134,7 @@
 .converging-arrows {
   display: flex;
   justify-content: center;
-  gap: 300px;
+  gap: 250px;
   position: relative;
   height: 60px;
 }
@@ -166,22 +168,7 @@
   margin-top: -1px;
 }
 
-.final-deduction-bubble {
-  background-image: url('../assets/cloud.svg');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 55px 75px;
-  min-width: 280px;
-  max-width: 320px;
-  text-align: center;
-  filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.2));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.final-deduction-bubble.interactive {
+.interactive {
   padding: 40px 60px;
   min-width: 320px;
   max-width: 400px;
@@ -209,7 +196,7 @@
 .arrows-container {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 50%;
   position: relative;
   height: 100px;
   margin: 0;
@@ -239,7 +226,7 @@
 
 .arrow-line {
   width: 3px;
-  height: 80px;
+  height: 160px;
   background-color: #555;
 }
 
