--- a/src/styles/pages/RobotThinking.css
+++ b/src/styles/pages/RobotThinking.css
@@ -42,22 +42,28 @@
 }
 
 .memory-cloud {
-  background-image: url('../assets/cloud.svg');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position: center;
+  position: relative;
   padding: 65px 45px 45px 45px;
   min-width: 250px;
   max-width: 310px;
   text-align: center;
   filter: drop-shadow(0 6px 20px rgba(0, 0, 0, 0.2));
-  position: relative;
   opacity: 0;
   transform: translateY(-20px);
   transition: all 0.6s ease-out;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.memory-cloud .cloud-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: 0;
 }
 
 .memory-cloud.show {
@@ -71,6 +77,8 @@
   color: #333;
   margin: 0;
   line-height: 1.5;
+  position: relative;
+  z-index: 1;
 }
 
 /* Deduction arrow pointing down */
@@ -98,10 +106,7 @@
 
 /* Deduction bubble */
 .deduction-bubble {
-  background-image: url('../assets/cloud.svg');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position: center;
+  position: relative;
   padding: 55px 45px 45px 45px;
   min-width: 280px;
   max-width: 320px;
@@ -113,12 +118,24 @@
   justify-content: center;
 }
 
+.deduction-bubble .cloud-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: 0;
+}
+
 .deduction-text {
   font-size: 15px;
   font-weight: 600;
   color: #333;
   margin: 0;
   line-height: 1.5;
+  position: relative;
+  z-index: 1;
 }
 
 /* Final deduction container with converging arrows */
@@ -184,11 +201,14 @@
   text-align: center;
   padding: 10px;
   font-family: inherit;
+  position: relative;
+  z-index: 2;
 }
 
 .deduction-input::placeholder {
-  color: #999;
+  color: #666;
   font-weight: 500;
+  opacity: 0.8;
 }
 
 /* Arrows container - diagonal arrows pointing UP from brain to clouds */
